# rsipclient

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.toml  install.bat  install.ps1  install.sh
.deep/: config.json  input_history.json  memory.md
.deep/history/: 5ef1f053-1a5c-4f96-ba2c-974056ff65ff.json
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  tcp-protocol.md
src/: cli.rs  config.rs  ipc.rs  ipc_client.rs  ivr.rs  main.rs  service.rs
src/ivr/: mod.rs  parser.rs  session.rs  types.rs
src/rtp/: codec.rs  mod.rs  receiver.rs  wav.rs
src/service/: commands_server.rs  handlers.rs  logger.rs  watcher.rs  web_handlers.rs  web_server.rs
src/service/handlers/: call.rs  registration.rs  status.rs
src/service/watcher/: incoming_call.rs  registration.rs
src/service/web/: app.js  audio.js  auth.js  config.js  index.html  style.css
src/service/web_handlers/: accounts.rs  audio_ws.rs  auth.rs  calls.rs  config_handlers.rs  status.rs
src/sip/: auth.rs  client.rs  messages.rs  mod.rs  operations.rs  sdp.rs  settings.rs  transfer.rs  transport.rs  utils.rs
src/sip/operations/: call.rs  hold_transfer.rs  register.rs
src/sip/transport/: tcp.rs  tls.rs  udp.rs
